# Foodwagon

./: .coverage  .pre-commit-config.yaml  README.md  db.sqlite3  pyproject.toml
admins/: forms.py  urls.py  views.py
delivery/: models.py  urls.py  views.py
delivery/migrations/: 0001_initial.py  0002_order_token.py  0003_auto_20210803_1323.py  0004_alter_order_date_of_order.py  0005_auto_20210803_1345.py  0006_alter_order_day.py  0007_remove_order_time.py  0008_auto_20210803_2049.py  0009_remove_order_city.py  0010_remove_order_token.py
delivery/templatetags/: extra_filters.py
docs/: admins.rst  conf.py  index.rst  signup.rst
login/: forms.py  models.py  tokens.py  urls.py  views.py
login/migrations/: 0001_initial.py  0002_alter_user_is_active.py  0002_vendorinfo_banner.py  0003_alter_user_profile_pic.py  0003_user_staff.py  0004_rename_staff_user_is_staff.py  0005_alter_user_admin.py  0006_alter_user_admin.py  0007_vendorinfo.py
login/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
mulberry/: asgi.py  settings.py  urls.py  wsgi.py
product/: admin.py  forms.py  models.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_remove_product_category.py  0002_remove_product_location.py  0003_auto_20210726_1222.py  0003_offer.py  0004_categories_status.py  0004_product_status.py  0005_alter_product_status.py  0005_alter_product_unique_together.py  (+3 more)
static/css/: style.css  (+6 more)
templates/: acc_active_email.html  acc_for_vendor.html  base.html  delivery.html  invoice.html  sign_in.html  sign_up.html
user/: forms.py  urls.py  views.py
(+74 files in other folders)
