[tool.poetry]
name = "mulberry"
version = "0.1.0"
description = ""
authors = ["Anupam1223 <anupam.siwakoti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.6b0"
mypy = "^0.910"
bandit = "^1.7.0"
Pillow = "^8.3.1"
django-utils-six = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
